# Odtwarzacz-MP3

./: .gitignore  .gitmodules  LICENSE  README.md  cos-tam-dziala-godz-12-14.7z  dokumentacja_C10.docx  mainv2.c  wav_player.hex
.mcuxpressoide_packages_support/: info.properties
.metadata/: version.ini
Helix/: .cproject  CMakeLists.txt  README.md
Helix/Debug/: makefile  sources.mk
Helix/Debug/src/: subdir.mk
Helix/Debug/src/libhelix/: subdir.mk
Helix/Debug/src/libhelix/real/: subdir.mk
Helix/examples/decode_custom_io/: example_decode_custom_io.c
Lib_CMSISv1p30_LPC17xx/: .cproject
Lib_CMSISv1p30_LPC17xx/Debug/: makefile
Lib_EaBaseBoard/: .cproject
Lib_EaBaseBoard/Debug/: makefile
Lib_FatFs_SD/: .cproject
Lib_FatFs_SD/Debug/: makefile
Lib_Helix/: .project
Lib_MCU/: .cproject
Lib_MCU/Debug/: makefile
bnc_oled/: .cproject
demo/: .cproject
disp7seg_rotary/: .cproject
easyweb/: .cproject
i2c_eeprom/: .cproject
leds_joystick/: .cproject
mmc_fat/: .cproject  .project  mmc_fat LinkServer Debug.launch
mmc_fat/Debug/: makefile  mmc_fat.axf  mmc_fat_Debug.ld  mmc_fat_Debug_library.ld  mmc_fat_Debug_memory.ld  rdb1768cmsis_uart_Debug.ld  rdb1768cmsis_uart_Debug_library.ld  rdb1768cmsis_uart_Debug_memory.ld
mmc_fat/src/: fattime.c  helix_mp3.h  main.c  testme.c
mp3_decoder/: .project
oled_periph/: .cproject
rgb_joystick/: .cproject
speaker_tone/: .cproject
speaker_wav/: .cproject
spi_flash/: .cproject
uart2/: .cproject
usbhostlite/: .cproject
usbmem/: .cproject
wav_player/: .cproject  .project
xbee_oled/: .cproject
(+97 files in other folders)
